Added module select, initial commit

--- a/css/comparator.css
+++ b/css/comparator.css
@@ -36,6 +36,10 @@ body{
     margin: 0 auto;
 }
 
+.module_selects{
+    display: none;
+}
+
 .usa{
     background: url('/wotstrat/images/usa.jpg');
     height: 20px;
