--- a/css/style-dark.css
+++ b/css/style-dark.css
@@ -99,7 +99,7 @@ color: #404040;
 }
 
 .page-title {
-border-bottom: 1px solid #202020;
+/*border-bottom: 1px solid #202020;*/
 }
 .subtitle {
 color: #c0c0c0;
