--- a/css/comparator.css
+++ b/css/comparator.css
@@ -56,6 +56,17 @@ body{
     /*text-align: left;*/
 }
 
+#modal{
+    background: grey;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    opacity: .3;
+    display: none;
+}
+
 .usa{ background: url('../images/usa.png');}
 
 .china{ background: url('../images/china.png');}
