--- a/css/style.css
+++ b/css/style.css
@@ -351,7 +351,7 @@ margin: 0 10px 0 0;
 .post-container {
 float: left;
 width: 100%;
-margin: 30px 0 0 0;
+margin: 5px 0 0 0;
 }
 .post-thumbnail-wrapper {
 float: left;
@@ -385,8 +385,24 @@ border: 0 none;
 width: 100%;
 height: 100%;
 }
+.panel{
+    border: 1px solid grey;
+    -moz-border-radius: 20px;
+    -webkit-border-radius: 20px;
+    border-radius: 20px;
+    padding: 10px;
+}
+.post_image{
+    width: 100px;
+    height: 250px;
+    background: url('../images/launch_balloons.png');
+    float: left;
+}
 .post-content {
-float: left;
+    width: 805px;
+    display: inline;
+    float: right;
+    margin-left: 10px;
 }
 .extended {
 width: 600px !important;
